--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   pull_request:
     branches:
-      - "*"
+      - main
   push:
     branches:
-      - master
+      - main
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -22,20 +22,6 @@ jobs:
     if: github.event.pull_request.draft == false || github.event_name != 'pull_request'
     permissions:
       contents: read
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: stocktracker
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=5s
-          --health-timeout=5s
-          --health-retries=5
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -83,7 +69,7 @@ jobs:
     name: Build and Push Docker image
     runs-on: ubuntu-latest
     needs: lint-test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
       packages: write
