--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.56.2
-          args: --timeout=5m
+          args: --timeout=5m --tests=false
 
       - name: Test (race + coverage)
         run: go test ./... -race -coverprofile=coverage.out -covermode=atomic
