--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GO_VERSION: "1.22"
+  GO_VERSION: "1.24.1"
 
 jobs:
   lint-test:
@@ -53,8 +53,8 @@ jobs:
       - name: Lint (golangci-lint)
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.56.2
-          args: --timeout=5m --tests=false --disable=goanalysis_metalinter
+          version: v1.61.0
+          args: --timeout=5m --tests=false
 
       - name: Test (race + coverage)
         run: go test ./... -race -coverprofile=coverage.out -covermode=atomic
