--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,17 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
+          cache-dependency-path: go.sum
 
-      - name: Download dependencies
-        run: go mod download
+      - name: Cache Go build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-build-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-build-
 
       - name: Check formatting (gofmt)
         run: |
@@ -45,10 +53,7 @@ jobs:
           fi
 
       - name: Build
-        run: go build ./...
-
-      - name: Lint (go vet)
-        run: go vet ./...
+        run: go build -v ./...
 
       - name: Lint
         uses: golangci/golangci-lint-action@v9.2.0
@@ -56,10 +61,11 @@ jobs:
           version: v2.7.2
 
       - name: Test (race + coverage)
-        run: go test ./... -race -coverprofile=coverage.out -covermode=atomic
+        run: go test -v ./... -race -coverprofile=coverage.out -covermode=atomic
 
       - name: Upload coverage
         uses: actions/upload-artifact@v6.0.0
+        if: always()
         with:
           name: coverage.out
           path: coverage.out
