--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,11 +61,9 @@ jobs:
           version: v2.7.2
 
       - name: Test (race + coverage)
-        run: go test -v ./... -race -coverprofile=coverage.out -covermode=atomic
+        run: go test -v ./... -race -coverprofile=coverage.txt -covermode=atomic
 
-      - name: Upload coverage
-        uses: actions/upload-artifact@v6.0.0
-        if: always()
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
         with:
-          name: coverage.out
-          path: coverage.out
+          token: ${{ secrets.CODECOV_TOKEN }}
