refactor: replace shopspring decimal with domain.Decimal across the codebase (#2)
* refactor: replace shopspring decimal with domain.Decimal across the codebase

# Conflicts:
#	internal/application/portfolio_service.go
#	internal/domain/portfolio_test.go
#	internal/infrastructure/marketdata/twelvedata/client.go
#	internal/infrastructure/marketdata/twelvedata/client_test.go
#	internal/infrastructure/persistence/gorm/repository_test.go

* chore: add .vscode/settings.json to .gitignore

* chore: git remove .vscode/setting

* refactor: enhance error handling in decimal operations and portfolio calculations

* refactor: improve error handling and logging in portfolio service and tests

* refactor: remove unused exampleSetupLogger function from main_test.go

* refactor: update portfolio service to use context and improve error handling

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ go.work
 *.swp
 *.swo
 *~
+.vscode/settings.json
 
 # OS
 .DS_Store
@@ -34,3 +35,5 @@ Thumbs.db
 
 # Logs and temp files
 *.txt
+/qodana.yaml
+/coverage
