--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-build-
 
+      - name: Verify go mod tidy
+        run: |
+          go mod tidy
+          git diff --exit-code
+
+      - name: Security Check (govulncheck)
+        run: |
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+          govulncheck ./...
+
+      - name: Security Audit (gosec)
+        uses: securego/gosec@master
+        with:
+          args: ./...
+
       - name: Check formatting (gofmt)
         run: |
           fmt_out=$(gofmt -l .)
