--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -29,6 +29,12 @@ jobs:
 
       - uses: docker/setup-buildx-action@v3
 
+      - name: Test (All DBs - Integration)
+        env:
+          TEST_DB: all
+        run: |
+          go test -v ./internal/infrastructure/persistence/sqldb/... -race
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
