feat: add GitHub Actions workflow to build, scan, and publish multi-arch Docker image to GHCR with cleanup

--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -66,9 +66,7 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: |
-            ${{ env.IMAGE }}:latest
-            ${{ env.IMAGE }}:sha-${{ github.event.workflow_run.head_sha }}
+          tags: ${{ env.IMAGE }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
