--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
     if: github.event.pull_request.draft == false || github.event_name != 'pull_request'
     permissions:
       contents: read
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -82,3 +83,92 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      # Dependency update checks (only on PRs)
+      - name: Check for dependency updates
+        if: github.event_name == 'pull_request'
+        id: deps
+        run: |
+          echo "Checking for direct dependency updates..."
+          UPDATES=$(go list -m -u -f '{{if and .Update (not .Indirect)}}{{.Path}}: {{.Version}} → {{.Update.Version}}{{end}}' all 2>/dev/null | grep -v '^$' || true)
+          if [ -n "$UPDATES" ]; then
+            echo "has_updates=true" >> $GITHUB_OUTPUT
+            {
+              echo "updates<<EOF"
+              echo "$UPDATES"
+              echo "EOF"
+            } >> $GITHUB_OUTPUT
+          else
+            echo "has_updates=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Check for Go version update
+        if: github.event_name == 'pull_request'
+        id: go_version
+        run: |
+          echo "Checking for Go version updates..."
+          CURRENT_GO="${{ env.GO_VERSION }}"
+          LATEST_GO=$(curl -s 'https://go.dev/dl/?mode=json' | jq -r '.[0].version' | sed 's/go//')
+          echo "Current Go version: $CURRENT_GO"
+          echo "Latest Go version: $LATEST_GO"
+          if [ "$CURRENT_GO" != "$LATEST_GO" ]; then
+            echo "has_update=true" >> $GITHUB_OUTPUT
+            echo "current=$CURRENT_GO" >> $GITHUB_OUTPUT
+            echo "latest=$LATEST_GO" >> $GITHUB_OUTPUT
+          else
+            echo "has_update=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Comment on PR with dependency updates
+        if: github.event_name == 'pull_request' && (steps.deps.outputs.has_updates == 'true' || steps.go_version.outputs.has_update == 'true')
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const hasDepUpdates = '${{ steps.deps.outputs.has_updates }}' === 'true';
+            const hasGoUpdate = '${{ steps.go_version.outputs.has_update }}' === 'true';
+            
+            let body = '## 📦 Dependency Update Check\n\n';
+            
+            if (hasGoUpdate) {
+              body += '### 🐹 Go Version\n';
+              body += '| Current | Latest |\n';
+              body += '|---------|--------|\n';
+              body += `| \`${{ steps.go_version.outputs.current }}\` | \`${{ steps.go_version.outputs.latest }}\` |\n\n`;
+            }
+            
+            if (hasDepUpdates) {
+              body += '### 📚 Direct Dependencies\n';
+              body += '```\n';
+              body += `${{ steps.deps.outputs.updates }}`;
+              body += '\n```\n\n';
+            }
+            
+            body += '> ℹ️ This is an informational comment. Updates are not required for this PR to pass.\n';
+            body += '> Run `go get -u <module>` to update a specific dependency.';
+            
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number
+            });
+            
+            const botComment = comments.find(c => 
+              c.user.type === 'Bot' && 
+              c.body.includes('📦 Dependency Update Check')
+            );
+            
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: body
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: body
+              });
+            }
