feat: implement core stock tracking functionality with domain models, application services, persistence, market data integration, and HTTP API.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-# Twelve Data API Configuration
+# Market Data Provider Configuration
+# Choose between: "twelvedata" (default) or "finnhub"
+MARKET_DATA_PROVIDER=twelvedata
+
+# Twelve Data API Configuration (required if MARKET_DATA_PROVIDER=twelvedata)
+# Get your API key at: https://twelvedata.com/
 TWELVE_DATA_API_KEY=your_api_key_here
+
+# Finnhub API Configuration (required if MARKET_DATA_PROVIDER=finnhub)
+# Get your API key at: https://finnhub.io/register
+# FINNHUB_API_KEY=your_api_key_here
 
 # Server Configuration
 SERVER_PORT=8080
@@ -8,3 +17,19 @@ SERVER_HOST=localhost
 # Application Configuration
 PRICE_REFRESH_INTERVAL=60s
 LOG_LEVEL=info
+
+# Database Configuration
+# Supported drivers: "postgres" or "oracle"
+DB_DRIVER=postgres
+
+# PostgreSQL Connection String
+DB_DSN=postgres://postgres:postgres@localhost:5432/stocktracker?sslmode=disable
+
+# Oracle Connection String (use this format if DB_DRIVER=oracle)
+# DB_DSN=oracle://user:password@host:port/service_name
+# 
+# Example with SSL/TLS:
+# DB_DSN=oracle://user:password@host:port/service_name?SSL=enable&SSL Verify=false
+#
+# Example with TNS alias (requires tnsnames.ora):
+# DB_DSN=oracle://user:password@tns_alias
