feat: implement initial market data clients (YFinance,), application configuration, and main entrypoint.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Market Data Provider Configuration
-# Choose between: "twelvedata" (default) or "finnhub"
+# Choose between: "twelvedata" (default), "finnhub", or "yfinance"
 MARKET_DATA_PROVIDER=twelvedata
 
 # Twelve Data API Configuration (required if MARKET_DATA_PROVIDER=twelvedata)
@@ -9,6 +9,13 @@ TWELVE_DATA_API_KEY=your_api_key_here
 # Finnhub API Configuration (required if MARKET_DATA_PROVIDER=finnhub)
 # Get your API key at: https://finnhub.io/register
 # FINNHUB_API_KEY=your_api_key_here
+
+# YFinance Market Data Service (required if MARKET_DATA_PROVIDER=yfinance)
+# This is a self-hosted Python microservice using yfinance library.
+# No API key required - just run the service and configure the URL.
+# Default: http://localhost:8000
+# For Kubernetes: http://market-data-service:8000
+# YFINANCE_BASE_URL=http://localhost:8000
 
 # Server Configuration
 SERVER_PORT=8080
